--- a/src/app/componenti/home/home.component.html
+++ b/src/app/componenti/home/home.component.html
@@ -1,4 +1,8 @@
 <div class="container">
+    <!--TESTTTTTTTTTTTTT-->
+    <div *ngIf="authService.isLogged()">
+        Ciao User
+    </div>
     <div class="sezione">
         <h3 class="titolo-blocco">
             Quale emozione stai cercando?
