--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,6 +11,26 @@ mat-toolbar {
   box-shadow: none !important;
 }
 
+.links-container {
+  margin-inline: 1rem;
+}
+.link {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.link-button {
+  background: none;
+  border: none;
+  text-align: end;
+  margin: 0;
+  width: 190px;
+  height: 80px;
+  cursor: pointer;
+  color: black;
+  font-size: 20px;
+}
+
 .sidenav {
   width: 100%;
   background-color: #f7f7f7;
