--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,12 @@
 <mat-drawer-container class="container" autosize>
     <mat-drawer #drawer class="sidenav" mode="over" style="background-color: #f5f3f7;">
-        <mat-toolbar >
-            <span class="spacer"></span>
+        
+        <div class="close-container">
             <button mat-mini-fab class="menu-button" (click)="drawer.close()">
                 <mat-icon>close</mat-icon>
             </button>
-        </mat-toolbar>
-        <div class="toolbar-padding">
         </div>
-
+            
         <div class="links-container">
             <div class="link">
                 <button class="link-button">Home</button>
@@ -25,10 +23,10 @@
             <div style="display: flex;justify-content: flex-end">
                 <hr style="width: 90%;margin: 0;">
             </div>
-            <div class="link" *ngIf="!authService.isLogged()">
+            <div class="link" *ngIf="!(authService.currentUser$|async)">
                 <button class="link-button">Log in</button>
             </div>
-            <div class="link" *ngIf="authService.isLogged()">
+            <div class="link" *ngIf="authService.currentUser$|async">
                 <button (click)="doLogout()" class="link-button">Log out</button>
             </div>
         </div>
@@ -36,7 +34,7 @@
 
     <div class="content">
         <mat-toolbar>
-            <span>LOGO</span>
+            <span><svg-icon src="../assets/Icons/STEP_LOGO.svg"></svg-icon></span>
             <span class="spacer"></span>
             <button mat-mini-fab class="menu-button" (click)="drawer.open()">
                 <mat-icon>menu</mat-icon>
