--- a/src/app/componenti/luogo/luogo.component.html
+++ b/src/app/componenti/luogo/luogo.component.html
@@ -1,1 +1,75 @@
-<p>luogo works!</p>
+<div class="container">
+    
+    <ng-container *ngIf="luogo$| async; let luogo">
+
+        <img class="immagine-luogo" src="{{luogo.imm}}" alt="">
+
+        <div class="sezione">
+            <div class="location-container">
+                <mat-icon id="location-icon">location_on</mat-icon>
+                <p style="margin: 0;">
+                    {{luogo.location}}
+                </p>
+                
+            </div>
+        </div>
+        <div class="sezione">
+            <div class="titolo-container">
+                <div class="flexer">
+                    <h2 class="titolo">{{luogo.nome}}</h2>
+                    <span class="spacer"></span>
+                    <button mat-mini-fab class="share-button" (click)="onShare()">
+                        <mat-icon>share</mat-icon>
+                    </button>
+                </div>
+
+            </div>
+            <p class="descrizione">
+                {{luogo.descrizione}}
+            </p>
+        </div>
+        <div class="sezione" *ngIf="luogo.info !== ''">
+            <div class="titolo-container">
+                <h4 class=" sottosezione">Info Utili</h4>
+            </div>
+        </div>
+        <div class="sezione">
+            <div class="titolo-container">
+                <h4 class=" sottosezione">Emozioni Correlate</h4>
+            </div>
+            <div class="emozioni-container">
+                <mat-chip class="chip aggiungi-button" *ngIf="authService.currentUser$ | async">Aggiungi</mat-chip>
+                <mat-chip disabled class="chip" *ngFor="let obiettivo of luogo.obiettivi">
+
+                    {{toCap(obiettivo.nome)}}
+
+                </mat-chip>
+            </div>
+        </div>
+
+
+        <div class="sezione">
+            <div class="titolo-container">
+                <h4 class=" sottosezione">Anima Locus</h4>
+            </div>
+        </div>
+
+        <div class="container-emozioni">
+            <div class="button-container"  *ngFor="let obiettivo of  luogo.obiettivi; index as i " matBadge="{{obiettivo.container.length}}">
+                <button matRipple type="button"  class="emozione" (click)="esploraAnimaLocus(luogo.id,i)"  value="{{obiettivo.nome}}">
+                    <div class="icon-button" >
+                        <svg-icon src="{{getIconByName(obiettivo.nome)}}" ></svg-icon>
+                        
+                    </div>
+                    <p class="label-button">
+                        {{obiettivo.nome}}
+                    </p>
+                </button>
+                
+            </div>
+        </div>
+    </ng-container>
+
+
+
+</div>
