--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,22 +9,22 @@
             
         <div class="links-container">
             <div class="link">
-                <button class="link-button">Home</button>
+                <button class="link-button" (click)="nav('home')" >Home</button>
             </div>
             <div class="link">
-                <button class="link-button">Esplora</button>
+                <button class="link-button" (click)="nav('')">Esplora</button>
             </div>
             <div class="link">
-                <button class="link-button">Leaderboard</button>
+                <button class="link-button" (click)="nav('')">Leaderboard</button>
             </div>
             <div class="link">
-                <button class="link-button">Per Operatori</button>
+                <button class="link-button" (click)="nav('')">Per Operatori</button>
             </div>
             <div style="display: flex;justify-content: flex-end">
                 <hr style="width: 90%;margin: 0;">
             </div>
             <div class="link" *ngIf="!(authService.currentUser$|async)">
-                <button class="link-button">Log in</button>
+                <button class="link-button" (click)="doLogIn()">Log in</button>
             </div>
             <div class="link" *ngIf="authService.currentUser$|async">
                 <button (click)="doLogout()" class="link-button">Log out</button>
@@ -36,7 +36,7 @@
         <mat-toolbar>
             <span><svg-icon src="../assets/Icons/STEP_LOGO.svg"></svg-icon></span>
             <span class="spacer"></span>
-            <button mat-mini-fab class="menu-button" (click)="drawer.open()">
+            <button mat-mini-fab class="menu-button" (click)="openMenu()">
                 <mat-icon>menu</mat-icon>
             </button>
         </mat-toolbar>
