aggiunto anima locus immagini con la possibilità di add

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -16,6 +16,11 @@ mat-toolbar {
   justify-content: flex-end
 }
 
+.container{
+  min-height: 100%;
+  background-color: #f5f3f7;
+}
+
 .links-container {
   margin-inline: 1rem;
 }
