--- a/src/app/dialogs/login-signup-dialog/login-signup-dialog.component.html
+++ b/src/app/dialogs/login-signup-dialog/login-signup-dialog.component.html
@@ -83,7 +83,7 @@
             </form>
 
             <div class="switch-button-container" >
-                <button class="link" (click)="switchPage()">Hai già un account? Log in</button>
+                <button class="link" (click)="switchPage()">Non hai ancora un account? Registrati</button>
             </div>
         
         </mat-dialog-content>
