aggiunto anima locus con add e visualizzazione, aggiunto cerca pagina

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
                     <button class="link-button" (click)="nav('home')" >Home</button>
                 </div>
                 <div class="link">
-                    <button class="link-button" (click)="nav('')">Esplora</button>
+                    <button class="link-button" (click)="nav('cerca')">Cerca</button>
                 </div>
                 <div class="link">
                     <button class="link-button" (click)="nav('')">Leaderboard</button>
