--- a/src/app/dialogs/aggiungi-anima/aggiungi-anima.component.html
+++ b/src/app/dialogs/aggiungi-anima/aggiungi-anima.component.html
@@ -39,6 +39,9 @@
                 
                     <div class="form-field">
                         <input type="text" class="input-text" placeholder="Titolo Link" type="text" name="titolo" formControlName="titolo">
+                        <p class="avviso">
+                           Nota: Metti massimo 7 caratteri
+                        </p>
                     </div>
             
                     <div class="form-field">
