--- a/src/app/componenti/anima-locus/anima-locus.component.css
+++ b/src/app/componenti/anima-locus/anima-locus.component.css
@@ -59,7 +59,12 @@
   height: 100%;
   border-radius: 30px;
   background-color: #015ede;
+  color: white;
+  font-size: large;
+  font-weight: lighter;
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
+
