--- a/src/app/componenti/home/home.component.html
+++ b/src/app/componenti/home/home.component.html
@@ -1,107 +1,114 @@
-<div class="container">
-    <!--TESTTTTTTTTTTTTT-->
-    <div *ngIf="authService.currentUser$ | async">
-        Ciao User
+<div *ngIf="caricamento">
+    <div class="caricamento-container">
+
+        <mat-spinner></mat-spinner>
     </div>
-    <div class="sezione">
-        <h3 class="titolo-blocco">
-            Quale emozione stai cercando?
-        </h3>
-        <div class="scrollable-container" *ngIf="emozioni.length>1">
-            <mat-chip class="chip"
-                [ngClass]="{'first-chip': emozione === emozioni[0], 'last-chip': emozione === emozioni[emozioni.length-1]}"
-                *ngFor="let emozione of emozioni" (click)="selezionaChip(emozione)">
+</div>
+<div *ngIf="!caricamento">
+    <div class="container">
 
-                {{toCap(emozione)}}
+        <div class="sezione">
+            <h3 class="titolo-blocco">
+                Quale emozione stai cercando?
+            </h3>
+            <div class="scrollable-container" *ngIf="emozioni.length>1">
+                <mat-chip class="chip"
+                    [ngClass]="{'first-chip': emozione === emozioni[0], 'last-chip': emozione === emozioni[emozioni.length-1]}"
+                    *ngFor="let emozione of emozioni" (click)="selezionaChip(emozione)">
 
-            </mat-chip>
+                    {{toCap(emozione)}}
+
+                </mat-chip>
+            </div>
         </div>
-    </div>
 
-    <div class="sezione">
-        <h3 class="titolo-blocco">
-            In Evidenza
-        </h3>
-        <div class="card-container" (click)="goToLuogo(luogo_evidenza.id)">
-            <div *ngIf="ready">
-                <mat-card class="card" id="evidenza">
-                    <img class="imm-card" src="{{luogo_evidenza.imm}}">
-                    <div class="emozioni-container">
-                        <mat-chip disabled class="chip" *ngFor="let obiettivo of luogo_evidenza.obiettivi">
+        <div class="sezione">
+            <h3 class="titolo-blocco">
+                In Evidenza
+            </h3>
+            <div class="card-container" (click)="goToLuogo(luogo_evidenza.id)">
+                <div *ngIf="ready">
+                    <mat-card class="card" id="evidenza">
+                        <img class="imm-card" src="{{luogo_evidenza.imm}}">
+                        <div class="emozioni-container">
+                            <mat-chip disabled class="chip" *ngFor="let obiettivo of luogo_evidenza.obiettivi">
 
-                            {{toCap(obiettivo.nome)}}
+                                {{toCap(obiettivo.nome)}}
 
-                        </mat-chip>
-                    </div>
-                    <mat-card-title>{{luogo_evidenza.nome}}</mat-card-title>
-                    <p class="par-card">
-                        {{luogo_evidenza.descrizione}}
-                    </p>
+                            </mat-chip>
+                        </div>
+                        <mat-card-title>{{luogo_evidenza.nome}}</mat-card-title>
+                        <p class="par-card">
+                            {{luogo_evidenza.descrizione}}
+                        </p>
+                    </mat-card>
+                </div>
+            </div>
+        </div>
+
+        <div class="sezione">
+            <h3 class="titolo-blocco">
+                Da Esplorare
+            </h3>
+            <div class="scrollable-container">
+
+                <mat-card class="card" *ngFor="let luogo of luoghi_scopri" (click)="goToLuogo(luogo.id)">
+                    <img class="imm-card" src="{{luogo.imm}}" alt="Photo of a Shiba Inu">
+
+
+                    <mat-card-title style="padding-top: 5px;">{{luogo.nome}}</mat-card-title>
+
                 </mat-card>
+
             </div>
         </div>
     </div>
-
     <div class="sezione">
         <h3 class="titolo-blocco">
-            Da Esplorare
+            Come si sentono gli altri
         </h3>
-        <div class="scrollable-container">
 
-            <mat-card class="card" *ngFor="let luogo of luoghi_scopri" (click)="goToLuogo(luogo.id)">
-                <img class="imm-card" src="{{luogo.imm}}" alt="Photo of a Shiba Inu">
+        <div class="carousel-container">
+            <owl-carousel-o [options]="customOptions">
+                <ng-template carouselSlide *ngFor="let commento of commenti">
+                    <div class="comment">
+                        <div class="comment-header">
+                            <div class="stars">
+                                <star-rating [starType]="'svg'" [readOnly]="true"
+                                    [rating]="commento.recensione"></star-rating>
+                            </div>
 
-
-                <mat-card-title style="padding-top: 5px;">{{luogo.nome}}</mat-card-title>
-
-            </mat-card>
-
-        </div>
-    </div>
-</div>
-<div class="sezione">
-    <h3 class="titolo-blocco">
-        Come si sentono gli altri
-    </h3>
-
-    <div class="carousel-container">
-        <owl-carousel-o [options]="customOptions">
-            <ng-template carouselSlide *ngFor="let commento of commenti">
-                <div class="comment" >
-                    <div class="comment-header">
-                        <div class="stars">
-                            <star-rating [starType]="'svg'" [readOnly]="true" [rating]="commento.recensione"></star-rating>
+                            <svg-icon [svgStyle]="{ 'width.px':30 }"
+                                src="../../../assets/Icons/tripadvisor-icon.svg"></svg-icon>
                         </div>
-                        
-                        <svg-icon [svgStyle]="{ 'width.px':30 }" src="../../../assets/Icons/tripadvisor-icon.svg"></svg-icon>
+                        <div class="commment-content">
+                            <p class="comment-title">{{commento.titolo}}</p>
+                            <p class="comment-desc">
+                                {{commento.descrizione}}
+                            </p>
+                        </div>
+                        <div class="comment-footer">
+                            <p class="comment-location">{{commento.luogo}}</p>
+                        </div>
                     </div>
-                    <div class="commment-content">
-                        <p class="comment-title">{{commento.titolo}}</p>
-                        <p class="comment-desc">
-                            {{commento.descrizione}}
-                        </p>
-                    </div>
-                    <div class="comment-footer">
-                        <p class="comment-location">{{commento.luogo}}</p>
-                    </div>
-                </div>
-            </ng-template>
+                </ng-template>
 
-        </owl-carousel-o>
+            </owl-carousel-o>
+        </div>
+
     </div>
-
-</div>
-<div class="container-no-padding" *ngIf="!(authService.currentUser$ | async)">
-    <div class="sezione ultima-sezione">
-        <h3 class="titolo-blocco">
-            Vivi la tua esperienza emozionale
-        </h3>
-        <div class="login-container">
-            <p class="login-desc">
-                Accedi o crea un account per personalizzare la tua
-                esperienza e partecipare alla community game
-            </p>
-            <button  class="button" (click)="onClick()">Log in o Sign up</button>
+    <div class="container-no-padding" *ngIf="!(authService.currentUser$ | async)">
+        <div class="sezione ultima-sezione">
+            <h3 class="titolo-blocco">
+                Vivi la tua esperienza emozionale
+            </h3>
+            <div class="login-container">
+                <p class="login-desc">
+                    Accedi o crea un account per personalizzare la tua
+                    esperienza e partecipare alla community game
+                </p>
+                <button class="button" (click)="onClick()">Log in o Sign up</button>
+            </div>
         </div>
     </div>
 </div>
