--- a/src/app/componenti/cerca/cerca.component.html
+++ b/src/app/componenti/cerca/cerca.component.html
@@ -9,20 +9,40 @@
 
             </div>
 
-            <mat-chip (click)="true" class="chip"><mat-icon class="filtra-button">tune</mat-icon><span
+            <mat-chip (click)="onClickFiltra()" class="chip"><mat-icon class="filtra-button">tune</mat-icon><span
                     class="label-filtra">Filtra</span> </mat-chip>
         </form>
 
     </div>
     <div class="sezione">
 
-        <ng-component
-            *ngIf="stringaDaCercare==='' ||emozioniSelezionati.length == 0 ||  emozioniSelezionati.length == 0  ">
-            <!--In caso -->
-            <h4 class="titolo">Suggerimenti</h4>
-            
+        <div
+            *ngIf="stringaDaCercare==='' && emozioniSelezionati.length == 0 &&  emozioniSelezionati.length == 0  ">
 
-        </ng-component>
+            <h4 class="titolo-blocco">Suggerimenti</h4>
+            <div *ngIf="suggerimenti$|async">
+                <div class="card-container" *ngFor="let luogo of suggerimenti$|async" (click)="goToLuogo(luogo.id)">
+
+                    <mat-card class="card">
+                        <img class="imm-card" src="{{luogo.imm}}">
+                        <div class="emozioni-container">
+                            <mat-chip disabled class="chip" *ngFor="let obiettivo of luogo.obiettivi">
+
+                                {{toCap(obiettivo.nome)}}
+
+                            </mat-chip>
+                        </div>
+                        <mat-card-title>{{luogo.nome}}</mat-card-title>
+                        <p class="par-card">
+                            {{luogo.descrizione}}
+                        </p>
+                    </mat-card>
+
+                </div>
+            </div>
+        </div>
+
+        
 
 
     </div>
