--- a/src/app/componenti/home/home.component.css
+++ b/src/app/componenti/home/home.component.css
@@ -1,7 +1,7 @@
 .container {
   padding: 1rem 0;
   width: 100%;
-  min-height: 100%;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   background-color: #f5f3f7;
