--- a/src/app/componenti/cerca/cerca.component.css
+++ b/src/app/componenti/cerca/cerca.component.css
@@ -15,6 +15,20 @@
   align-items: flex-end;
   margin-top: 2rem;
 }
+.button-mappa {
+  width: 100%;
+  border: none;
+  background-image: linear-gradient(to right, #002d6b, #015ede);
+  color: white;
+  display: flex;
+  flex-direction: column;
+  height: 75px;
+  font-size: medium;
+  font-weight: bold;
+  align-items: center;
+  justify-content: space-evenly;
+  border-radius: 20px;
+}
 
 .login-form {
   width: 100%;
@@ -114,24 +128,23 @@ mat-card-title {
   white-space: initial;
 }
 
-
-.eliminabile{
+.eliminabile {
   --mdc-chip-label-text-color: white;
-  --mdc-chip-elevated-container-color: #015EDE; 
+  --mdc-chip-elevated-container-color: #015ede;
 }
 
-.err-container{
+.err-container {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.img-errore{
+.img-errore {
   width: 120px;
 }
 
-.paragrado-errore{
+.paragrado-errore {
   text-align: center;
   font-size: large;
 }
