--- a/src/app/componenti/luogo/luogo.component.css
+++ b/src/app/componenti/luogo/luogo.component.css
@@ -138,3 +138,25 @@
     background-image: linear-gradient(to right, #002d6b, #015ede) !important;
     --mdc-chip-label-text-color: white;
 }
+
+.button-map{
+  border: #015ede solid 1px;
+  color: #015ede;
+  background-color: white;
+  width: 100%;
+  height: 100%;
+  box-shadow: #64646447 0px 5px 10px 0px;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: medium;
+}
+
+.button-map-container{
+  width: 100%;
+  height: 50px;
+  box-sizing: border-box;
+  padding-inline: 1rem;
+  margin-bottom: 2rem;
+}
